docs: Add content

--- a/docs/content/1.getting-started/2.setup.md
+++ b/docs/content/1.getting-started/2.setup.md
@@ -1,1 +1,34 @@
 # Setup
+
+First add `@bg-dev/nuxt-naiveui` dependency to your project
+
+```bash
+# using npm
+npm install --save-dev @bg-dev/nuxt-naiveui
+
+# Using pnpm
+pnpm install --save-dev @bg-dev/nuxt-naiveui
+
+# Using yarn
+yarn add --dev @bg-dev/nuxt-naiveui
+```
+
+Then add `@bg-dev/nuxt-naiveui` to the `modules` section of `nuxt.config.ts`
+
+```bash
+export default defineNuxtConfig({
+  //
+  modules: ["@bg-dev/nuxt-naiveui"],
+  //
+});
+```
+
+Finally set `NaiveConfig` as root component in `app.vue`.
+
+```vue
+<template>
+    <naive-config>
+        <!-- start here -->
+    </naive-config>
+</template>
+```
