--- a/docs/content/2.components/1.naive-config.md
+++ b/docs/content/2.components/1.naive-config.md
@@ -1,1 +1,25 @@
 # NaiveConfig
+
+This component is intended for theme configuration and reactivity, plus setting up global styles via `body` tag. 
+
+The configuration part is handled via `n-config-provider` naive-ui component through which the theme is overridden based on colorMode and deviceType. 
+
+`naive-config` accepts configuration via `themeConfig` prop with fallback to the `naiveui.themeConfig` config option.
+
+```ts
+interface ThemeConfig {
+  shared?: GlobalThemeOverrides; // Common theme options
+  light?: GlobalThemeOverrides; // Theme options applied on mobile and tablet
+  dark?: GlobalThemeOverrides; // Theme options applied on mobile only
+  mobileOrTablet?: GlobalThemeOverrides; // Theme options applied on light mode
+  mobile?: GlobalThemeOverrides; // Theme options applied on dark mode
+}
+```
+
+On setup the `themeConfig` is merged with built-in default themes. These [defaults](https://github.com/becem-gharbi/nuxt-naiveui/tree/main/src/runtime/theme) are loaded dynamically based on the current colorMode and deviceType.
+
+The common theme properties are shared globally via `useThemeVars` naive-ui composable.
+
+::alert{type="warning"}
+Naive UI generates CSS using JS [(reference)](https://www.npmjs.com/package/css-render). This implementation **may cause an issue on pre-rendered Nuxt pages** because they are static (generated at build time). Thus a hydration mismatch may occur in this case.
+::
