--- a/docs/content/2.components/2.naive-icon.md
+++ b/docs/content/2.components/2.naive-icon.md
@@ -1,1 +1,15 @@
 # NaiveIcon
+
+This component is a wrapper of [Iconify Vue](https://iconify.design/getting-started/) which provides a collection of over 100 icon sets (Phosphor...).
+
+[Icônes](https://icones.js.org) can be used for exploration and instant search.
+
+### Props
+
+| **Name**     | **Type** | **Default**        | **Note**                        |
+| ------------ | -------- | ------------------ | ------------------------------- |
+| name         | string   |                    | This property is reactive       |
+| size         | number   | `naiveui.iconSize` | Should be in `px`               |
+| iconColor    | string   | inherited          | Color of icon                   |
+| color        | string   | transparent        | Background color of the wrapper |
+| borderRadius | number   |                    | Border radius of the wrapper    |
