--- a/docs/content/2.components/3.naive-navbar.md
+++ b/docs/content/2.components/3.naive-navbar.md
@@ -1,1 +1,40 @@
 # NaiveNavbar
+
+This component provides responsive navigation bar.
+
+It has nested menu items wrapping `NuxtLink` for routing with prefetch.
+
+```ts
+interface NavbarRoute {
+  label: string;
+  icon?: string; // icon name
+  path?: string;
+  children?: NavbarRoute[];
+}
+```
+
+### Props
+
+| **Name**           | **Type**                       | **Default** | **Note**                                       |
+| ------------------ | ------------------------------ | ----------- | ---------------------------------------------- |
+| routes             | NavbarRoute                    | \[ ]        | The routes for menu items                      |
+| drawerRoutes       | NavbarRoute                    | \[ ]        | Overrides routes in the drawer                 |
+| menuToggleIcon     | string                         | `ph:equals`   |                                                |
+| menuToggleIconSize | number                         | 26          |                                                |
+| backIcon           | boolean                        | false       | Enable back button on mobile devices           |
+| backIconSize       | number                         | 26          |                                                |
+| menuInverted       | boolean                        | false       | Use inverted style                             |
+| menuPlacement      | right \| left \| center        | left        | Horizontal menu placement relative to viewport |
+| drawerPlacement    | top \| right \| bottom \| left | left        |                                                |
+| sticky             | boolean                        | true        |                                                |
+| drawerClosable     | boolean                        | true        | Whether the drawer content is closable         |
+| drawerWidth        | string \| number               | 100%        |                                                |
+
+### Slots
+
+- `start`, placed at the left-side of navbar.
+- `end`, placed at the right-side of navbar.
+- `toggle`, placed instead of the toggle button.
+- `drawer-header`, placed at the top of the drawer.
+- `drawer-content`, placed at the bottom of the `drawer-header`.
+- `drawer-footer`, placed at the bottom of the drawer.
