--- a/docs/content/2.components/4.naive-tabbar.md
+++ b/docs/content/2.components/4.naive-tabbar.md
@@ -1,1 +1,19 @@
 # NaiveTabbar
+
+This component can be used for mobile & tablet navigation.
+
+```ts
+interface TabbarRoute {
+  label: string;
+  iconSelected: string;
+  iconUnselected: string;
+  path: string;
+}
+```
+
+### Props
+
+| **Name** | **Type**    | **Default** | **Note**                           |
+| -------- | ----------- | ----------- | ---------------------------------- |
+| routes   | TabbarRoute | \[ ]        | Recommended to not exceed 5 routes |
+| iconSize | number      | 24          | Should be in `px`                  |
