--- a/docs/content/2.components/5.naive-color-mode-switch.md
+++ b/docs/content/2.components/5.naive-color-mode-switch.md
@@ -1,1 +1,3 @@
 # NaiveColorModeSwitch
+
+This component can be used to change colorMode preference. Its has `n-button` naive-ui component as root so [props](https://www.naiveui.com/en-US/os-theme/components/button) fallthrough.
