--- a/docs/content/4.tailwindcss/1.integration.md
+++ b/docs/content/4.tailwindcss/1.integration.md
@@ -1,1 +1,56 @@
 # Integration
+
+The module provides friendly TailwindCSS integration by resolving potential style conflicts.
+
+Please make sure to install [NuxtTailwind](https://tailwindcss.nuxtjs.org/) module.
+
+#### Theme
+
+Please be aware this adds ~19.5KB (~3.5KB) to the client bundle size, [source](https://tailwindcss.nuxtjs.org/tailwind/config#referencing-in-the-application).
+
+```ts
+// nuxt.config.ts
+tailwindcss: {
+  exposeConfig: true;
+}
+```
+
+```ts
+// app.vue
+import { ThemeConfig } from "@bg-dev/nuxt-naiveui";
+import { theme } from "#tailwind-config";
+
+const themeConfig: ThemeConfig = {
+  shared: {
+    common: {
+      fontFamily: theme.fontFamily.sans.join(", "),
+      lineHeight: theme.lineHeight.normal,
+    },
+  },
+  light: {
+    common: {
+      primaryColor: theme.colors.blue[600],
+      primaryColorHover: theme.colors.blue[500],
+      primaryColorPressed: theme.colors.blue[700],
+    },
+  },
+  dark: {
+    common: {
+      primaryColor: theme.colors.blue[500],
+      primaryColorHover: theme.colors.blue[400],
+      primaryColorPressed: theme.colors.blue[600],
+    },
+  },
+};
+```
+
+#### ColorMode
+
+```js
+// tailwind.config.ts
+import type { Config } from "tailwindcss";
+
+export default <Partial<Config>>{
+  darkMode: "class",
+};
+```
