docs: Update naive-icon section

--- a/docs/content/0.index.md
+++ b/docs/content/0.index.md
@@ -30,7 +30,7 @@ Naive UI component library for your Nuxt 3 project
   - Highly customizable for color mode and device type
   - Friendly integration with Tailwindcss
   - Auto imported and tree-shakable components
-  - Provides custom components
+  - Adds custom components
   ::
 
 #support
