--- a/docs/content/2.components/2.naive-icon.md
+++ b/docs/content/2.components/2.naive-icon.md
@@ -8,8 +8,8 @@ This component is a wrapper of [Iconify Vue](https://iconify.design/getting-star
 
 | **Name**     | **Type** | **Default**        | **Note**                        |
 | ------------ | -------- | ------------------ | ------------------------------- |
-| name         | string   |                    | This property is reactive       |
+| name         | string   | undefined          | This property is reactive       |
 | size         | number   | `naiveui.iconSize` | Should be in `px`               |
-| iconColor    | string   | inherited          | Color of icon                   |
-| color        | string   | transparent        | Background color of the wrapper |
-| borderRadius | number   |                    | Border radius of the wrapper    |
+| iconColor    | string   | undefined          | Color of icon                   |
+| color        | string   | undefined          | Background color of the wrapper |
+| borderRadius | number   | undefined          | Border radius of the wrapper    |
