docs: Update naive-icon section

--- a/docs/content/2.components/2.naive-icon.md
+++ b/docs/content/2.components/2.naive-icon.md
@@ -1,6 +1,6 @@
 # NaiveIcon
 
-This component is a wrapper of [Iconify Vue](https://iconify.design/getting-started/) which provides a collection of over 100 icon sets (Phosphor...).
+This component is a wrapper of [Iconify Vue](https://iconify.design/getting-started/) which provides a collection of over 100 icon sets. FYI the module uses `Phosphor` icon set.
 
 [Icônes](https://icones.js.org) can be used for exploration and instant search.
 
