docs: Update content

--- a/docs/content/2.components/1.naive-config.md
+++ b/docs/content/2.components/1.naive-config.md
@@ -9,14 +9,14 @@ The configuration part is handled via `n-config-provider` naive-ui component thr
 ```ts
 interface ThemeConfig {
   shared?: GlobalThemeOverrides; // Common theme options
-  light?: GlobalThemeOverrides; // Theme options applied on mobile and tablet
-  dark?: GlobalThemeOverrides; // Theme options applied on mobile only
-  mobileOrTablet?: GlobalThemeOverrides; // Theme options applied on light mode
-  mobile?: GlobalThemeOverrides; // Theme options applied on dark mode
+  light?: GlobalThemeOverrides & { defaults?: boolean }; // Theme options applied on mobile and tablet
+  dark?: GlobalThemeOverrides & { defaults?: boolean }; // Theme options applied on mobile only
+  mobileOrTablet?: GlobalThemeOverrides & { defaults?: boolean }; // Theme options applied on light mode
+  mobile?: GlobalThemeOverrides & { defaults?: boolean }; // Theme options applied on dark mode
 }
 ```
 
-On setup the `themeConfig` is merged with built-in default themes. These [defaults](https://github.com/becem-gharbi/nuxt-naiveui/tree/main/src/runtime/theme) are loaded dynamically based on the current colorMode and deviceType.
+On setup the `themeConfig` is merged with built-in default themes. These [defaults](https://github.com/becem-gharbi/nuxt-naiveui/tree/main/src/runtime/theme) are loaded dynamically based on the current colorMode and deviceType. To disable a default theme, `defaults` property can be set to `false`.
 
 The common theme properties are shared globally via `useThemeVars` naive-ui composable.
 
