--- a/docs/content/3.composables/2.use-naive-device.md
+++ b/docs/content/3.composables/2.use-naive-device.md
@@ -5,4 +5,4 @@ It can be helpfull to lazy load components based on device in order to minimize 
 
 The exposed properties are `isMobileOrTablet` and `isMobile`.
 
-In case of prerendering, it's recommended to be cautious about hydration mismatch issues. In such case it's recommended to use these global CSS classes `mobileOrTablet` and `notMobileOrTablet`.
+In case of pre-rendering, it's recommended to be aware about hydration mismatch issues. In such case it's recommended to use these global CSS classes `mobileOrTablet` and `notMobileOrTablet` for responsive behaviour.
