docs: fix comments on theme config

--- a/docs/content/2.components/1.naive-config.md
+++ b/docs/content/2.components/1.naive-config.md
@@ -9,10 +9,10 @@ The configuration part is handled via `n-config-provider` naive-ui component thr
 ```ts
 interface ThemeConfig {
   shared?: GlobalThemeOverrides; // Common theme options
-  light?: GlobalThemeOverrides & { defaults?: boolean }; // Theme options applied on mobile and tablet
-  dark?: GlobalThemeOverrides & { defaults?: boolean }; // Theme options applied on mobile only
-  mobileOrTablet?: GlobalThemeOverrides & { defaults?: boolean }; // Theme options applied on light mode
-  mobile?: GlobalThemeOverrides & { defaults?: boolean }; // Theme options applied on dark mode
+  light?: GlobalThemeOverrides & { defaults?: boolean }; // Theme options applied on light mode
+  dark?: GlobalThemeOverrides & { defaults?: boolean }; // Theme options applied on dark mode
+  mobileOrTablet?: GlobalThemeOverrides & { defaults?: boolean }; // Theme options applied on mobile and tablet
+  mobile?: GlobalThemeOverrides & { defaults?: boolean }; // Theme options applied on mobile only
 }
 ```
 
