--- a/docs/content/2.components/3.naive-navbar.md
+++ b/docs/content/2.components/3.naive-navbar.md
@@ -13,13 +13,17 @@ interface NavbarRoute {
 }
 ```
 
+::alert{type="info"}
+Consider using `naive-layout-navbar` instead for styling via `themeConfig` and scrolling with `n-scrollbar`.
+::
+
 ### Props
 
 | **Name**           | **Type**                       | **Default** | **Note**                                       |
 | ------------------ | ------------------------------ | ----------- | ---------------------------------------------- |
 | routes             | NavbarRoute                    | \[ ]        | The routes for menu items                      |
 | drawerRoutes       | NavbarRoute                    | \[ ]        | Overrides routes in the drawer                 |
-| menuToggleIcon     | string                         | `ph:equals`   |                                                |
+| menuToggleIcon     | string                         | `ph:equals` |                                                |
 | menuToggleIconSize | number                         | 26          |                                                |
 | backIcon           | boolean                        | false       | Enable back button on mobile devices           |
 | backIconSize       | number                         | 26          |                                                |
