docs(NaiveLayout): Add `native-scrollbar` prop

--- a/docs/content/2.components/6.naive-layout-navbar.md
+++ b/docs/content/2.components/6.naive-layout-navbar.md
@@ -4,13 +4,14 @@ This component can be used for page layout with navbar. It's based on `naive-ui`
 
 ### Props
 
-| **Name**       | **Type**         | **Default** | **Note**                               |
-| -------------- | ---------------- | ----------- | -------------------------------------- |
-| routes         | MenuLinkRoute    | \[ ]        | The routes for the navbar              |
-| drawerRoutes   | MenuLinkRoute    | \[ ]        | The routes for the drawer              |
-| toggleIcon     | string           | `ph:equals` |                                        |
-| drawerClosable | boolean          | true        | Whether the drawer content is closable |
-| drawerWidth    | string \| number | 100%        |                                        |
+| **Name**        | **Type**         | **Default** | **Note**                               |
+| --------------- | ---------------- | ----------- | -------------------------------------- |
+| routes          | MenuLinkRoute    | \[ ]        | The routes for the navbar              |
+| drawerRoutes    | MenuLinkRoute    | \[ ]        | The routes for the drawer              |
+| toggleIcon      | string           | `ph:equals` |                                        |
+| drawerClosable  | boolean          | true        | Whether the drawer content is closable |
+| drawerWidth     | string \| number | 100%        |                                        |
+| nativeScrollbar | boolean          | false       |                                        |
 
 ### Slots
 
