docs(Components): Add `drawerPlacement` prop to NaiveLayout

--- a/docs/content/2.components/7.naive-layout-sidebar.md
+++ b/docs/content/2.components/7.naive-layout-sidebar.md
@@ -4,14 +4,15 @@ This component can be used for page layout with sidebar. It's based on `naive-ui
 
 ### Props
 
-| **Name**        | **Type**         | **Default** | **Note**                               |
-| --------------- | ---------------- | ----------- | -------------------------------------- |
-| routes          | MenuLinkRoute    | \[ ]        | The routes for the sidebar             |
-| drawerRoutes    | MenuLinkRoute    | \[ ]        | The routes for the drawer              |
-| toggleIcon      | string           | `ph:equals` |                                        |
-| drawerClosable  | boolean          | true        | Whether the drawer content is closable |
-| drawerWidth     | string \| number | 100%        |                                        |
-| nativeScrollbar | boolean          | false       |                                        |
+| **Name**        | **Type**                       | **Default** | **Note**                               |
+| --------------- | ------------------------------ | ----------- | -------------------------------------- |
+| routes          | MenuLinkRoute                  | \[ ]        | The routes for the sidebar             |
+| drawerRoutes    | MenuLinkRoute                  | \[ ]        | The routes for the drawer              |
+| toggleIcon      | string                         | `ph:equals` |                                        |
+| drawerClosable  | boolean                        | true        | Whether the drawer content is closable |
+| drawerWidth     | string \| number               | 100%        |                                        |
+| drawerPlacement | top \| right \| bottom \| left | left        |                                        |
+| nativeScrollbar | boolean                        | false       |                                        |
 
 ### Slots
 
