docs: No significant change

--- a/docs/content/0.index.md
+++ b/docs/content/0.index.md
@@ -29,7 +29,7 @@ Naive UI component library for your Nuxt 3 project
   - SSR friendly
   - Highly customizable for color mode and device type
   - Friendly integration with Tailwindcss
-  - Auto imported and tree-shakable components
+  - Auto imported components and composables
   - Adds custom components
   ::
 
