docs(NaiveConfig): Add themeConfig setup via app.config

--- a/docs/content/2.components/1.naive-config.md
+++ b/docs/content/2.components/1.naive-config.md
@@ -1,10 +1,10 @@
 # NaiveConfig
 
-This component is intended for theme configuration and reactivity, plus setting up global styles via `body` tag. 
+This component is intended for theme configuration and reactivity, plus setting up global styles via `body` tag.
 
-The configuration part is handled via `n-config-provider` naive-ui component through which the theme is overridden based on colorMode and deviceType. 
+The configuration part is handled via `n-config-provider` naive-ui component through which the theme is overridden based on colorMode and deviceType.
 
-`naive-config` accepts configuration via `themeConfig` prop with fallback to the `naiveui.themeConfig` config option.
+`naive-config` accepts configuration via `themeConfig` prop with fallback to `naiveui.themeConfig` option in `app.config` file or the `naiveui.themeConfig` module's config option.
 
 ```ts
 interface ThemeConfig {
