--- a/docs/content/3.composables/4.use-naive-notification.md
+++ b/docs/content/3.composables/4.use-naive-notification.md
@@ -2,7 +2,7 @@
 
 This composable is intended to support `useNotification` usage on Nuxt plugins.
 
-Make sure to include `naive-notification` once and as a child of `n-notification-provider`.
+Make sure to add `naive-notification` as a child of `n-notification-provider`.
 
 ```vue
 <template>
