--- a/docs/content/3.composables/5.use-naive-loading-bar.md
+++ b/docs/content/3.composables/5.use-naive-loading-bar.md
@@ -2,7 +2,7 @@
 
 This composable is intended to support `useLoadingBar` usage on Nuxt plugins.
 
-Make sure to include `naive-loading-bar` once and as a child of `n-loading-bar-provider`.
+Make sure to add `naive-loading-bar` as a child of `n-loading-bar-provider`.
 
 ```vue
 <template>
