--- a/docs/content/4.tailwindcss/1.integration.md
+++ b/docs/content/4.tailwindcss/1.integration.md
@@ -11,42 +11,46 @@ Please be aware this adds ~19.5KB (~3.5KB) to the client bundle size, [source](h
 ```ts
 // nuxt.config.ts
 tailwindcss: {
-  exposeConfig: true;
+  exposeConfig: {
+    write: true;
+  }
 }
 ```
 
 ```ts
-// app.vue
-import { ThemeConfig } from "@bg-dev/nuxt-naiveui";
-import { theme } from "#tailwind-config";
+//app.config.ts
+import { _colors, _fontFamily } from "#tailwind-config/theme.mjs";
 
-const themeConfig: ThemeConfig = {
-  shared: {
-    common: {
-      fontFamily: theme.fontFamily.sans.join(", "),
-      lineHeight: theme.lineHeight.normal,
+export default defineAppConfig({
+  naiveui: {
+    themeConfig: {
+      shared: {
+        common: {
+          fontFamily: _fontFamily.sans.join(", "),
+        },
+      },
+      light: {
+        common: {
+          primaryColor: _colors.blue[600],
+          primaryColorHover: _colors.blue[500],
+          primaryColorPressed: _colors.blue[700],
+        },
+      },
+      dark: {
+        common: {
+          primaryColor: _colors.blue[500],
+          primaryColorHover: _colors.blue[400],
+          primaryColorPressed: _colors.blue[600],
+        },
+      },
     },
   },
-  light: {
-    common: {
-      primaryColor: theme.colors.blue[600],
-      primaryColorHover: theme.colors.blue[500],
-      primaryColorPressed: theme.colors.blue[700],
-    },
-  },
-  dark: {
-    common: {
-      primaryColor: theme.colors.blue[500],
-      primaryColorHover: theme.colors.blue[400],
-      primaryColorPressed: theme.colors.blue[600],
-    },
-  },
-};
+});
 ```
 
 #### ColorMode
 
-```js
+```ts
 // tailwind.config.ts
 import type { Config } from "tailwindcss";
 
