docs: mention icon download option

--- a/docs/content/2.components/2.naive-icon.md
+++ b/docs/content/2.components/2.naive-icon.md
@@ -13,3 +13,12 @@ This component is a wrapper of [Iconify Vue](https://iconify.design/getting-star
 | iconColor    | string   | undefined          | Color of icon                   |
 | color        | string   | undefined          | Background color of the wrapper |
 | borderRadius | number   | undefined          | Border radius of the wrapper    |
+
+### Offline
+
+By default icons are fetched at runtime from Iconify API. By setting `iconDownload` config option to `true`, icons can be downloaded and stored locally to `public/iconify` directory. This takes place only at built. The advantages are:
+
+- ✔️ On server side no need for network calls thus better loading time.
+- ✔️ On client side no need to rely on Iconify API thus better security.
+- ✔️ Takes benefit from Iconify client & server side caching (localStorage & memory).
+- ✔️ Build offline applications.
