docs(icons): mention custom collections URL

--- a/docs/content/2.components/2.naive-icon.md
+++ b/docs/content/2.components/2.naive-icon.md
@@ -21,3 +21,5 @@ By default icons are fetched at runtime from Iconify API. By setting `iconDownlo
 - ✔️ On server side no need for network calls thus better loading time.
 - ✔️ Takes benefit from Iconify client & server side caching (localStorage & memory).
 - ✔️ Build offline applications.
+
+In order for the module to find the used icons in your application, first it needs to collect all the existant icon sets. This takes place via a fetch request to `https://raw.githubusercontent.com/iconify/icon-sets/master/collections.json`. In case of network access limitations, it's possible to provide a custom proxy URL via `iconCollectionsUrl` config option.
