docs: minor UI improvements

--- a/docs/content/4.tailwindcss/1.integration.md
+++ b/docs/content/4.tailwindcss/1.integration.md
@@ -8,8 +8,9 @@ Please make sure to install [NuxtTailwind](https://tailwindcss.nuxtjs.org/) modu
 
 Please be aware this adds ~19.5KB (~3.5KB) to the client bundle size, [source](https://tailwindcss.nuxtjs.org/tailwind/config#referencing-in-the-application).
 
-```ts
-// nuxt.config.ts
+::code-group
+
+```ts [nuxt.config.ts]
 tailwindcss: {
   exposeConfig: {
     write: true;
@@ -17,8 +18,7 @@ tailwindcss: {
 }
 ```
 
-```ts
-//app.config.ts
+```ts [app.config.ts]
 import { _colors, _fontFamily } from "#tailwind-config/theme.mjs";
 
 export default defineAppConfig({
@@ -48,10 +48,11 @@ export default defineAppConfig({
 });
 ```
 
+::
+
 #### ColorMode
 
-```ts
-// tailwind.config.ts
+```ts [tailwind.config.ts]
 import type { Config } from "tailwindcss";
 
 export default <Partial<Config>>{
