--- a/docs/content/1.getting-started/2.setup.md
+++ b/docs/content/1.getting-started/2.setup.md
@@ -2,20 +2,25 @@
 
 First add `@bg-dev/nuxt-naiveui` dependency to your project
 
-```bash
-# using npm
+::code-group
+
+```bash [NPM]
 npm install --save-dev @bg-dev/nuxt-naiveui
+```
 
-# Using pnpm
-pnpm install --save-dev @bg-dev/nuxt-naiveui
-
-# Using yarn
+```bash [Yarn]
 yarn add --dev @bg-dev/nuxt-naiveui
 ```
 
+```bash [PNPM]
+pnpm install --save-dev @bg-dev/nuxt-naiveui
+```
+
+::
+
 Then add `@bg-dev/nuxt-naiveui` to the `modules` section of `nuxt.config.ts`
 
-```bash
+```bash [nuxt.config.ts]
 export default defineNuxtConfig({
   //
   modules: ["@bg-dev/nuxt-naiveui"],
@@ -25,10 +30,10 @@ export default defineNuxtConfig({
 
 Finally set `NaiveConfig` as root component in `app.vue`.
 
-```vue
+```vue [app.vue]
 <template>
-    <naive-config>
-        <!-- start here -->
-    </naive-config>
+  <naive-config>
+    <!-- start here -->
+  </naive-config>
 </template>
 ```
