docs: add setup for pnpm installation
closes #48

--- a/docs/content/1.getting-started/2.setup.md
+++ b/docs/content/1.getting-started/2.setup.md
@@ -14,8 +14,17 @@ yarn add --dev @bg-dev/nuxt-naiveui
 
 ```bash [PNPM]
 pnpm install --save-dev @bg-dev/nuxt-naiveui
-```
 
+# Add to `.npmrc` config file
+
+# Option 1 (recommended)
+public-hoist-pattern[]=@css-render/vue3-ssr
+public-hoist-pattern[]=vueuc
+public-hoist-pattern[]=naive-ui
+
+# Option 2
+shamefully-hoist=true
+```
 ::
 
 Then add `@bg-dev/nuxt-naiveui` to the `modules` section of `nuxt.config.ts`
