docs: mention `NaiveConfig` as root in `error.vue`

--- a/docs/content/1.getting-started/2.setup.md
+++ b/docs/content/1.getting-started/2.setup.md
@@ -37,7 +37,7 @@ export default defineNuxtConfig({
 });
 ```
 
-Finally set `NaiveConfig` as root component in `app.vue`.
+Finally set `NaiveConfig` as root component in `app.vue` and `error.vue`.
 
 ```vue [app.vue]
 <template>
