chore(playground): fix typo

--- a/docs/content/4.tailwindcss/1.integration.md
+++ b/docs/content/4.tailwindcss/1.integration.md
@@ -13,7 +13,7 @@ Please be aware this adds ~19.5KB (~3.5KB) to the client bundle size, [source](h
 ```ts [nuxt.config.ts]
 tailwindcss: {
   exposeConfig: {
-    write: true;
+    write: true,
   }
 }
 ```
