docs(tailwindcss): update color mode snippet

--- a/docs/content/4.tailwindcss/1.integration.md
+++ b/docs/content/4.tailwindcss/1.integration.md
@@ -55,7 +55,7 @@ export default defineAppConfig({
 ```ts [tailwind.config.ts]
 import type { Config } from "tailwindcss";
 
-export default <Partial<Config>>{
-  darkMode: "class",
+export default <Config> {
+  darkMode: "class"
 };
 ```
