docs: add `updateResetValue` to docs

--- a/docs/content/3.composables/3.use-naive-form.md
+++ b/docs/content/3.composables/3.use-naive-form.md
@@ -37,8 +37,9 @@ const model = ref({
 // Pass the form `model`, this will take a snapshot of the initial value and compare it to its reactive value.
 // The `reset` function will reset the `model` to its initial value or the value after successfull submit.
 // The `edited` state indicates changes relative to the initial value.
+// `updateResetValue` will update the internal default value to the current model value
 
-const { formRef, rules, pending, apiErrors, onSubmit, edited, reset } =
+const { formRef, rules, pending, apiErrors, onSubmit, edited, reset, updateResetValue } =
   useNaiveForm(model);
 
 // ApiErrors are reactive Record<string, boolean>.
