docs: Update 6.naive-layout-navbar.md

--- a/docs/content/2.components/6.naive-layout-navbar.md
+++ b/docs/content/2.components/6.naive-layout-navbar.md
@@ -2,6 +2,15 @@
 
 This component can be used for page layout with navbar. It's based on `naive-ui` [layout](https://www.naiveui.com/en-US/os-theme/components/layout).
 
+```ts
+interface MenuLinkRoute {
+  label: string;
+  icon?: string;
+  to?: string | RouteLocation;
+  children?: MenuLinkRoute[];
+}
+```
+
 ### Props
 
 | **Name**        | **Type**                       | **Default** | **Note**                               |
