docs: add new props

--- a/docs/content/2.components/5.naive-color-mode-switch.md
+++ b/docs/content/2.components/5.naive-color-mode-switch.md
@@ -1,3 +1,12 @@
 # NaiveColorModeSwitch
 
-This component can be used to change colorMode preference. Its has `n-button` naive-ui component as root so [props](https://www.naiveui.com/en-US/os-theme/components/button) fallthrough.
+This component can be used to change colorMode preference.
+
+### Props
+
+| **Name**       | **Type**    | **Default**  | **Note**                                                                      |
+| -------------- | ----------- | ------------ | ----------------------------------------------------------------------------- |
+| Button's props | ButtonProps |              | Refer to [naive-ui](https://www.naiveui.com/en-US/os-theme/components/button) |
+| iconLight      | string      | `ph:sun`     | Icon name for light mode                                                      |
+| iconDark       | string      | `ph:moon`    | Icon name for dark mode                                                       |
+| iconSystem     | string      | `ph:monitor` | Icon name for system preference                                              |
