docs: rearrange and add new props

--- a/docs/content/2.components/3.naive-navbar.md
+++ b/docs/content/2.components/3.naive-navbar.md
@@ -19,20 +19,21 @@ Consider using `naive-layout-navbar` instead for styling via `themeConfig` and s
 
 ### Props
 
-| **Name**           | **Type**                       | **Default** | **Note**                                       |
-| ------------------ | ------------------------------ | ----------- | ---------------------------------------------- |
-| routes             | NavbarRoute                    | \[ ]        | The routes for menu items                      |
-| drawerRoutes       | NavbarRoute                    | \[ ]        | Overrides routes in the drawer                 |
-| menuToggleIcon     | string                         | `ph:equals` |                                                |
-| menuToggleIconSize | number                         | 26          |                                                |
-| backIcon           | boolean                        | false       | Enable back button on mobile devices           |
-| backIconSize       | number                         | 26          |                                                |
-| menuInverted       | boolean                        | false       | Use inverted style                             |
-| menuPlacement      | right \| left \| center        | left        | Horizontal menu placement relative to viewport |
-| drawerPlacement    | top \| right \| bottom \| left | left        |                                                |
-| sticky             | boolean                        | true        |                                                |
-| drawerClosable     | boolean                        | true        | Whether the drawer content is closable         |
-| drawerWidth        | string \| number               | 100%        |                                                |
+| **Name**            | **Type**                       | **Default** | **Note**                                       |
+| ------------------- | ------------------------------ | ----------- | ---------------------------------------------- |
+| sticky              | boolean                        | true        |                                                |
+| routes              | NavbarRoute                    | \[ ]        | The routes for menu items                      |
+| drawerRoutes        | NavbarRoute                    | \[ ]        | Overrides routes in the drawer                 |
+| drawerPlacement     | top \| right \| bottom \| left | left        |                                                |
+| drawerClosable      | boolean                        | true        | Whether the drawer content is closable         |
+| drawerWidth         | string \| number               | 100%        |                                                |
+| menuToggleIcon      | string                         | `ph:equals` |                                                |
+| menuToggleIconSize  | number                         | 26          |                                                |
+| menuTogglePlacement | right \| left                  | right       |                                                |
+| menuInverted        | boolean                        | false       | Use inverted style                             |
+| menuPlacement       | right \| left \| center        | left        | Horizontal menu placement relative to viewport |
+| backIcon            | boolean                        | false       | Enable back button on mobile devices           |
+| backIconSize        | number                         | 26          |                                                |
 
 ### Slots
 
