--- a/docs/content/2.components/6.naive-layout-navbar.md
+++ b/docs/content/2.components/6.naive-layout-navbar.md
@@ -15,13 +15,14 @@ interface MenuLinkRoute {
 
 | **Name**        | **Type**                       | **Default** | **Note**                               |
 | --------------- | ------------------------------ | ----------- | -------------------------------------- |
+| nativeScrollbar | boolean                        | false       |                                        |
 | routes          | MenuLinkRoute                  | \[ ]        | The routes for the navbar              |
 | drawerRoutes    | MenuLinkRoute                  | \[ ]        | The routes for the drawer              |
-| toggleIcon      | string                         | `ph:equals` |                                        |
 | drawerClosable  | boolean                        | true        | Whether the drawer content is closable |
 | drawerWidth     | string \| number               | 100%        |                                        |
 | drawerPlacement | top \| right \| bottom \| left | left        |                                        |
-| nativeScrollbar | boolean                        | false       |                                        |
+| toggleIcon      | string                         | `ph:equals` |                                        |
+| togglePlacement | right \| left                  | right       |                                        |
 
 ### Slots
 
