docs(NaiveConfig): add customization section

--- a/docs/content/2.components/1.naive-config.md
+++ b/docs/content/2.components/1.naive-config.md
@@ -23,3 +23,19 @@ The common theme properties are shared globally via `useThemeVars` naive-ui comp
 ::alert{type="warning"}
 Naive UI generates CSS using JS [(reference)](https://www.npmjs.com/package/css-render). This implementation **may cause an issue on pre-rendered Nuxt pages** because they are static (generated at build time). Thus a hydration mismatch may occur in this case.
 ::
+
+### Customization
+
+To automatically generate color themes without granular customization, it's recommended to use `generateColorThemes` utility introduced in [#62](https://github.com/becem-gharbi/nuxt-naiveui/pull/62).
+
+```ts [app.config.ts]
+import { generateColorThemes } from "@bg-dev/nuxt-naiveui/utils";
+
+export default defineAppConfig({
+  naiveui: {
+    themeConfig: {
+      ...generateColorThemes({ primary: "#722ed1" }),
+    },
+  },
+});
+```
