--- a/docs/content/2.components/1.naive-config.md
+++ b/docs/content/2.components/1.naive-config.md
@@ -4,7 +4,7 @@ This component is intended for theme configuration and reactivity, plus setting 
 
 The configuration part is handled via `n-config-provider` naive-ui component through which the theme is overridden based on colorMode and deviceType.
 
-`naive-config` accepts configuration via `themeConfig` prop with fallback to `naiveui.themeConfig` property in `app.config` or `nuxt.config.ts`.
+`naive-config` accepts configuration via `naiveui.themeConfig` property in `app.config`.
 
 ```ts
 interface ThemeConfig {
