docs: update icon size type

--- a/docs/content/2.components/2.naive-icon.md
+++ b/docs/content/2.components/2.naive-icon.md
@@ -6,13 +6,13 @@ This component is a wrapper of [Iconify Vue](https://iconify.design/getting-star
 
 ### Props
 
-| **Name**     | **Type** | **Default**        | **Note**                        |
-| ------------ | -------- | ------------------ | ------------------------------- |
-| name         | string   | undefined          | This property is reactive       |
-| size         | number   | `naiveui.iconSize` | Should be in `px`               |
-| iconColor    | string   | undefined          | Color of icon                   |
-| color        | string   | undefined          | Background color of the wrapper |
-| borderRadius | number   | undefined          | Border radius of the wrapper    |
+| **Name**     | **Type**         | **Default**        | **Note**                        |
+| ------------ | ---------------- | ------------------ | ------------------------------- |
+| name         | string           | undefined          | This property is reactive       |
+| size         | number \| string | `naiveui.iconSize` |                                 |
+| iconColor    | string           | undefined          | Color of icon                   |
+| color        | string           | undefined          | Background color of the wrapper |
+| borderRadius | number           | undefined          | Border radius of the wrapper    |
 
 ### Offline
 
