--- a/docs/content/2.components/3.naive-navbar.md
+++ b/docs/content/2.components/3.naive-navbar.md
@@ -28,12 +28,12 @@ Consider using `naive-layout-navbar` instead for styling via `themeConfig` and s
 | drawerClosable      | boolean                        | true        | Whether the drawer content is closable         |
 | drawerWidth         | string \| number               | 100%        |                                                |
 | menuToggleIcon      | string                         | `ph:equals` |                                                |
-| menuToggleIconSize  | number                         | 26          |                                                |
+| menuToggleIconSize  | number \| string               | 26          |                                                |
 | menuTogglePlacement | right \| left                  | right       |                                                |
 | menuInverted        | boolean                        | false       | Use inverted style                             |
 | menuPlacement       | right \| left \| center        | left        | Horizontal menu placement relative to viewport |
 | backIcon            | boolean                        | false       | Enable back button on mobile devices           |
-| backIconSize        | number                         | 26          |                                                |
+| backIconSize        | number \| string               | 26          |                                                |
 
 ### Slots
 
