--- a/docs/content/2.components/4.naive-tabbar.md
+++ b/docs/content/2.components/4.naive-tabbar.md
@@ -13,7 +13,7 @@ interface TabbarRoute {
 
 ### Props
 
-| **Name** | **Type**    | **Default** | **Note**                           |
-| -------- | ----------- | ----------- | ---------------------------------- |
-| routes   | TabbarRoute | \[ ]        | Recommended to not exceed 5 routes |
-| iconSize | number      | 24          | Should be in `px`                  |
+| **Name** | **Type**         | **Default** | **Note**                           |
+| -------- | ---------------- | ----------- | ---------------------------------- |
+| routes   | TabbarRoute      | \[ ]        | Recommended to not exceed 5 routes |
+| iconSize | number \| string | 24          |                                    |
