--- a/docs/content/1.getting-started/2.setup.md
+++ b/docs/content/1.getting-started/2.setup.md
@@ -1,6 +1,6 @@
 # Setup
 
-First add `@bg-dev/nuxt-naiveui` dependency to your project
+Add `@bg-dev/nuxt-naiveui` dependency to your project
 
 ::code-group
 
@@ -25,9 +25,10 @@ public-hoist-pattern[]=naive-ui
 # Option 2
 shamefully-hoist=true
 ```
+
 ::
 
-Then add `@bg-dev/nuxt-naiveui` to the `modules` section of `nuxt.config.ts`
+Add `@bg-dev/nuxt-naiveui` to the `modules` section of `nuxt.config.ts`
 
 ```bash [nuxt.config.ts]
 export default defineNuxtConfig({
@@ -37,7 +38,7 @@ export default defineNuxtConfig({
 });
 ```
 
-Finally set `NaiveConfig` as root component in `app.vue` and `error.vue`.
+Set `NaiveConfig` as root component in `app.vue` and `error.vue`.
 
 ```vue [app.vue]
 <template>
@@ -46,3 +47,7 @@ Finally set `NaiveConfig` as root component in `app.vue` and `error.vue`.
   </naive-config>
 </template>
 ```
+
+For client-side only rendering, the module provides [spa loading templates](https://nuxt.com/docs/api/nuxt-config#spaloadingtemplate) aligned with the active theme colors. This feature can be set via `spaLoadingTemplate` config option with the following animations from [SpinKit](https://tobiasahlin.com/spinkit/): 
+
+`pulse`, `bar-scale`, `dot-chase`, `dot-scale`, `dot-bounce`, `dot-rotate`, `dot-rotate-scale`, `cube-rotate-scale`, `plane-fold`, `plane-wave`, `plane-rotate`.
