docs: update types

--- a/docs/content/2.components/3.naive-navbar.md
+++ b/docs/content/2.components/3.naive-navbar.md
@@ -5,16 +5,16 @@ This component provides responsive navigation bar.
 It has nested menu items wrapping `NuxtLink` for routing with prefetch.
 
 ```ts
-interface NavbarRoute {
+interface MenuLinkRoute {
   label: string;
-  icon?: string; // icon name
-  path?: string;
-  children?: NavbarRoute[];
+  icon?: string;
+  to?: RouteLocationRaw;
+  children?: MenuLinkRoute[];
 }
 ```
 
 ::alert{type="info"}
-Consider using `naive-layout-navbar` instead for styling via `themeConfig` and scrolling with `n-scrollbar`.
+`MenuLinkRoute` type can be imported from `#build/types/naiveui`.
 ::
 
 ### Props
@@ -22,8 +22,8 @@ Consider using `naive-layout-navbar` instead for styling via `themeConfig` and s
 | **Name**            | **Type**                       | **Default** | **Note**                                       |
 | ------------------- | ------------------------------ | ----------- | ---------------------------------------------- |
 | sticky              | boolean                        | true        |                                                |
-| routes              | NavbarRoute                    | \[ ]        | The routes for menu items                      |
-| drawerRoutes        | NavbarRoute                    | \[ ]        | Overrides routes in the drawer                 |
+| routes              | MenuLinkRoute                  | \[ ]        | The routes for menu items                      |
+| drawerRoutes        | MenuLinkRoute                  | \[ ]        | Overrides routes in the drawer                 |
 | drawerPlacement     | top \| right \| bottom \| left | left        |                                                |
 | drawerClosable      | boolean                        | true        | Whether the drawer content is closable         |
 | drawerWidth         | string \| number               | 100%        |                                                |
