--- a/docs/content/2.components/4.naive-tabbar.md
+++ b/docs/content/2.components/4.naive-tabbar.md
@@ -7,7 +7,7 @@ interface TabbarRoute {
   label: string;
   iconSelected: string;
   iconUnselected: string;
-  path: string;
+  to: RouteLocationRaw;
 }
 ```
 
