--- a/docs/content/2.components/6.naive-layout-navbar.md
+++ b/docs/content/2.components/6.naive-layout-navbar.md
@@ -6,7 +6,7 @@ This component can be used for page layout with navbar. It's based on `naive-ui`
 interface MenuLinkRoute {
   label: string;
   icon?: string;
-  to?: string | RouteLocation;
+  to?: RouteLocationRaw;
   children?: MenuLinkRoute[];
 }
 ```
