--- a/docs/content/2.components/7.naive-layout-sidebar.md
+++ b/docs/content/2.components/7.naive-layout-sidebar.md
@@ -6,7 +6,7 @@ This component can be used for page layout with sidebar. It's based on `naive-ui
 interface MenuLinkRoute {
   label: string;
   icon?: string;
-  to?: string | RouteLocation;
+  to?: RouteLocationRaw;
   children?: MenuLinkRoute[];
 }
 ```
