--- a/docs/content/0.index.md
+++ b/docs/content/0.index.md
@@ -22,7 +22,7 @@ secondary:
 Nuxt Naive UI
 
 #description
-Naive UI component library for your Nuxt 3 project
+Naive UI component library for Nuxt
 
 #extra
   ::list
