--- a/docs/content/1.getting-started/1.introduction.md
+++ b/docs/content/1.getting-started/1.introduction.md
@@ -1,6 +1,6 @@
 # Introduction
 
-Nuxt Naive UI is an unofficial module for [Nuxt3](https://nuxt.com/) that aims to provide a complete UI layer based on [Naive UI](https://www.naiveui.com/) Vue 3 component library. 
+Nuxt Naive UI is an unofficial module for [Nuxt](https://nuxt.com/) that aims to provide a complete UI layer based on [Naive UI](https://www.naiveui.com/) Vue 3 component library. 
 
 - Complete, as It provides over 80 Naive UI components, over 150k Iconify icons, built-in dark mode support and more..
 - Lightweight, as it provides tree-shakable components and no-static css implementation for minimal bundle size.
