docs: mention the official module

--- a/docs/content/0.index.md
+++ b/docs/content/0.index.md
@@ -22,7 +22,7 @@ secondary:
 Nuxt Naive UI
 
 #description
-Naive UI component library for Nuxt
+Unofficial Naive UI integration for Nuxt
 
 #extra
   ::list
