--- a/docs/content/1.getting-started/1.introduction.md
+++ b/docs/content/1.getting-started/1.introduction.md
@@ -1,8 +1,12 @@
 # Introduction
 
-Nuxt Naive UI is an unofficial module for [Nuxt](https://nuxt.com/) that aims to provide a complete UI layer based on [Naive UI](https://www.naiveui.com/) Vue 3 component library. 
+Nuxt Naive UI is an unofficial module for [Nuxt](https://nuxt.com/) that aims to provide a complete UI layer based on [Naive UI](https://www.naiveui.com/) Vue 3 component library.
 
 - Complete, as It provides over 80 Naive UI components, over 150k Iconify icons, built-in dark mode support and more..
 - Lightweight, as it provides tree-shakable components and no-static css implementation for minimal bundle size.
 - Customizable, as it supports granular theme configuration via javascript based on colorMode and device type.
 - Pleasant DX, as it's built with typescript and provides [Volar](https://marketplace.visualstudio.com/items?itemName=Vue.volar) types definition for intellisense.
+
+::Alert
+The official `naive-ui` module for Nuxt is recently created and can be found [here](https://github.com/07akioni/nuxtjs-naive-ui).
+::
